[gd_scene load_steps=32 format=3 uid="uid://d0owg7aispb6k"]

[ext_resource type="Script" uid="uid://do43bypiomier" path="res://player/player.gd" id="1_g1dw6"]
[ext_resource type="Texture2D" uid="uid://gvfag7xmawec" path="res://player/player_sprites.png" id="2_8t03j"]
[ext_resource type="Script" uid="uid://dfmk3lkfqrbru" path="res://components/hurt_player/health_cmp.gd" id="2_hg6s5"]
[ext_resource type="Script" uid="uid://dkyhwdj2bikpr" path="res://state_machine/state_machine.gd" id="2_rkbax"]
[ext_resource type="Script" uid="uid://dls8mdmma08bd" path="res://player/states_transitions/running_state.gd" id="4_qjkh3"]
[ext_resource type="Script" uid="uid://dqjoc1gvu6u1f" path="res://player/states_transitions/falling_state.gd" id="5_qjkh3"]
[ext_resource type="Script" uid="uid://dykha120bp2lp" path="res://player/states_transitions/jumping_state.gd" id="6_g6k8r"]
[ext_resource type="Script" uid="uid://dwj4cj2jxq5s3" path="res://player/states_transitions/sliding_state.gd" id="7_boad6"]
[ext_resource type="Script" uid="uid://jok3a0h0dl5c" path="res://player/states_transitions/climbing_state.gd" id="8_rgyib"]
[ext_resource type="AudioStream" uid="uid://tleiwvqsrfu0" path="res://player/running.ogg" id="10_8t03j"]
[ext_resource type="AudioStream" uid="uid://dx7ucw25criur" path="res://player/hurt_player.ogg" id="11_2ieo8"]
[ext_resource type="AudioStream" uid="uid://bmgkb01q06fn0" path="res://player/slide.ogg" id="13_yllr7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2ieo8"]
atlas = ExtResource("2_8t03j")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjvpn"]
atlas = ExtResource("2_8t03j")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hg6s5"]
atlas = ExtResource("2_8t03j")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8t03j"]
atlas = ExtResource("2_8t03j")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebec5"]
atlas = ExtResource("2_8t03j")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yllr7"]
atlas = ExtResource("2_8t03j")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kb6p2"]
atlas = ExtResource("2_8t03j")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wodsf"]
atlas = ExtResource("2_8t03j")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_32hag"]
atlas = ExtResource("2_8t03j")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqiix"]
atlas = ExtResource("2_8t03j")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7oew"]
atlas = ExtResource("2_8t03j")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c35mf"]
atlas = ExtResource("2_8t03j")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_65viv"]
atlas = ExtResource("2_8t03j")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7c3f"]
atlas = ExtResource("2_8t03j")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7qer"]
atlas = ExtResource("2_8t03j")
region = Rect2(96, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ebec5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ieo8")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjvpn")
}],
"loop": true,
"name": &"falling",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hg6s5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8t03j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebec5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yllr7")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kb6p2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wodsf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32hag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqiix")
}],
"loop": true,
"name": &"jumping",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7oew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c35mf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65viv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7c3f")
}],
"loop": true,
"name": &"running",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7qer")
}],
"loop": true,
"name": &"sliding",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hg6s5"]
radius = 5.0
height = 24.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g1dw6"]
radius = 5.0
height = 24.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hg6s5"]
size = Vector2(25, 27)

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_g1dw6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ebec5")
animation = &"sliding"
autoplay = "idle"
offset = Vector2(0, -16)

[node name="CollisionShapeStanding" type="CollisionShape2D" parent="."]
position = Vector2(0, -12)
shape = SubResource("CapsuleShape2D_hg6s5")

[node name="CollisionShapeSliding" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_g1dw6")
disabled = true

[node name="HealthCMP" type="Node" parent="."]
script = ExtResource("2_hg6s5")
metadata/_custom_type_script = "uid://dfmk3lkfqrbru"

[node name="RayCastFrontLow" type="RayCast2D" parent="."]
position = Vector2(0, -2)
rotation = -1.5707964
target_position = Vector2(-2.3841858e-07, 6)

[node name="RayCastFrontHigh" type="RayCast2D" parent="."]
position = Vector2(0, -23)
rotation = -1.5707964
target_position = Vector2(0, 6)

[node name="RayCastTopLeft" type="RayCast2D" parent="."]
position = Vector2(-7, -18)
rotation = 3.1415927
target_position = Vector2(9.536743e-07, 7)
hit_from_inside = true

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(100, 0)
zoom = Vector2(1.5, 1.5)
limit_bottom = 0
position_smoothing_enabled = true
position_smoothing_speed = 15.0

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("default_state")]
script = ExtResource("2_rkbax")
default_state = NodePath("FallingState")
metadata/_custom_type_script = "uid://dkyhwdj2bikpr"

[node name="RunningState" type="Node" parent="StateMachine" node_paths=PackedStringArray("foot", "player")]
unique_name_in_owner = true
script = ExtResource("4_qjkh3")
foot = NodePath("../../Foot")
player = NodePath("../..")
metadata/_custom_type_script = "uid://jq4v0q17k46t"

[node name="FallingState" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
unique_name_in_owner = true
script = ExtResource("5_qjkh3")
player = NodePath("../..")
metadata/_custom_type_script = "uid://di65evtvk35k3"

[node name="JumpingState" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
unique_name_in_owner = true
script = ExtResource("6_g6k8r")
player = NodePath("../..")
metadata/_custom_type_script = "uid://tnwl4f0v5fm5"

[node name="SlidingState" type="Node" parent="StateMachine" node_paths=PackedStringArray("animated_sprite", "standing_collision", "sliding_collision", "slide", "player")]
unique_name_in_owner = true
script = ExtResource("7_boad6")
slide_duration = 0.5
animated_sprite = NodePath("../../AnimatedSprite2D")
standing_collision = NodePath("../../CollisionShapeStanding")
sliding_collision = NodePath("../../CollisionShapeSliding")
slide = NodePath("../../Slide")
player = NodePath("../..")
metadata/_custom_type_script = "uid://bstl75k3o027e"

[node name="ClimbingState" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
unique_name_in_owner = true
script = ExtResource("8_rgyib")
player = NodePath("../..")
metadata/_custom_type_script = "uid://jbvpx27cis5o"

[node name="BodySensor" type="Area2D" parent="."]
position = Vector2(0, -13)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodySensor"]
shape = SubResource("RectangleShape2D_hg6s5")

[node name="Foot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_8t03j")
volume_db = -5.0

[node name="Hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_2ieo8")
volume_db = -10.0

[node name="Slide" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_yllr7")
volume_db = -5.0

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.08
one_shot = true
